[package]
authors = ["David Fisher <ddf1991@gmail.com>"]
edition = "2018"
name = "online_codes"
description = "Implementation of online codes, a rateless erasure coding."
version = "0.1.0"
repository = "https://github.com/ddfisher/online-codes"
readme = "README.md"
keywords = ["erasure", "fountain", "online", "code"]
categories = ["encoding"]
license = "MIT"

[dependencies]
env_logger = "*"
rand = "*"
rand_core = "*"
rand_xoshiro = "*"
